base/alertmanager/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: zcp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: alertmanager
  template:
    metadata:
      name: alertmanager
      labels:
        component: alertmanager
    spec:
      serviceAccountName: zcp-system-admin
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: node-role.kubernetes.io/management
                operator: Exists
      containers:
      - name: alertmanager
        image: au.icr.io/cloudzcp/alertmanager:v0.20.0
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            cpu: 10m
            memory: 50Mi
        args:
          - '--config.file=/etc/config/alertmanager.yml'
          - '--storage.path=/data'
        ports:
        - name: alertmanager
          containerPort: 9093
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/healthy
            port: 9093
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/ready
            port: 9093
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        - name: storage-volume
          mountPath: /data
        - name: templates-volume
          mountPath: /etc/templates
        - name: secrets-volume
          mountPath: /etc/secrets
          subPath: ""
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: alertmanager
      - name: storage-volume
        emptyDir: {}
      - name: templates-volume
        configMap:
          name: alertmanager-templates
      - name: secrets-volume
        secret:
          secretName: alertmanager-secret
