base/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: zcp-system
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    component: alertmanager 
spec:
  ports:
    - name: alertmanager
      port: 9093
      targetPort: 9093
      protocol: TCP
  selector:
    component: alertmanager
