base/alertmanager/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-alertmanager-ingress
  namespace: zcp-system
spec:
  rules:
  - host: base-alertmanager.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-service
          servicePort: 9093
  tls:
  - secretName: cloudzcp-io-cert
    hosts:
    - base-alertmanager.cloudzcp.io
